FFHRS-42: Mini hero amends - Add Welsh example - Fix cut off images

--- a/src/components/general/Hero/hero.scss
+++ b/src/components/general/Hero/hero.scss
@@ -451,36 +451,40 @@
 
     .hero__mask-wrapper {
       @media screen and (min-width: $fsa-md) {
-        padding-bottom: 3rem;
+        min-height: 208px;
       }
 
       @media screen and (min-width: $fsa-lg) {
-        padding-bottom: 6rem;
-      }
-
-      @media screen and (min-width: $fsa-xl) {
-        padding-bottom: 8rem;
-        min-height: 0;
+        min-height: 296px;
       }
     }
 
     .hero__content-wrapper {
+      margin: 1rem 0;
       @media screen and (min-width: $fsa-md) {
-        padding: 0 1rem;
-        max-width: 60%;
-        flex-basis: 60%;
+        margin: 2rem 0 0;
+        max-width: 55%;
+        flex-basis: 55%;
+      }
+      @media screen and (min-width: $fsa-lg) {
+        max-width: 56%;
+        flex-basis: 56%;
       }
 
-      @media screen and (min-width: $fsa-lg) {
-        max-width: 57%;
-        flex-basis: 57%;
+      @media screen and (min-width: $fsa-xl) {
+        margin: 0;
       }
+    }
+
+    .hero__title {
+      margin-top: 0;
     }
 
     .hero__image {
       height: 9.125rem;
       display: flex;
       align-items: center;
+      width: 100%;
 
       svg {
         @media screen and (min-width: $fsa-md) {
